MOW-410 cursor highlighter z-index fix.
git-svn-id: http://dev.geogebra.org/svn/trunk/geogebra@61194 23ce0884-8a58-47d3-bc5c-ddf1cd5b9f9e

--- a/web/src/main/resources/org/geogebra/web/resources/scss/mow.scss
+++ b/web/src/main/resources/org/geogebra/web/resources/scss/mow.scss
@@ -889,6 +889,7 @@
 		}	
 		
 		.cursor_pen,
+		.cursor_highlighter,
 		.cursor_hit,
 		.cursor_drag,
 		.cursor_resizeEW,
